fix: view container is overlapped by now playing bar

--- a/user.css
+++ b/user.css
@@ -22,7 +22,7 @@
 .Root__main-view {
   z-index: 0;
   background-color: var(--spice-main);
-  height: 110%;
+  height: 100%;
 }
 
 .os-scrollbar {
@@ -1318,7 +1318,7 @@ option {
 
 .Root__now-playing-bar {
   padding-right: 6px;
-  margin: 13px;
+  margin: 0px 13px 13px 13px;
   width: calc(100% - 26px);
   box-shadow: 0px 0px 8px 4px rgba(0, 0, 0, 0.25) !important;
   border-radius: var(--border-radius-1);
